Move Pkg.add to tox.ini
We need Pkg.build("PyCall") anyway so why don't we run other destructive
commands.

--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ deps =
     pytest-cov
     numba
 commands =
+    julia --color=yes -e 'Pkg.add("DiffEqPy")'
+    julia --color=yes -e 'Pkg.checkout("PyCall")'
     julia --color=yes -e 'Pkg.build("PyCall")'  # see PYTHON below
     julia --color=yes -e 'using DiffEqPy'
     py.test \
