Test import in tox.ini first

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ commands =
     julia --color=yes -e 'Pkg.checkout("PyCall")'
     julia --color=yes -e 'Pkg.build("PyCall")'  # see PYTHON below
     julia --color=yes -e 'using DiffEqPy'
+    python -c 'import diffeqpy.tests.test_ode'  # make sure import works
     py.test \
         --pyargs diffeqpy \
         {posargs}
