Use --startup-file=no in tox

--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,9 @@ deps =
     numba
 commands =
     julia --color=yes -e 'Pkg.init()'
-    julia --color=yes -e 'Pkg.add("DiffEqPy")'
-    julia --color=yes -e 'Pkg.checkout("PyCall")'
-    julia --color=yes -e 'using DiffEqPy'
+    julia --startup-file=no --color=yes -e 'Pkg.add("DiffEqPy")'
+    julia --startup-file=no --color=yes -e 'Pkg.checkout("PyCall")'
+    julia --startup-file=no --color=yes -e 'using DiffEqPy'
     python -c 'import diffeqpy.tests.test_ode'  # make sure import works
     py.test \
         --pyargs diffeqpy \
