Allow a workaround for LibGit2 error

--- a/tox.ini
+++ b/tox.ini
@@ -28,3 +28,7 @@ setenv =
 
     # Do not use matplotlib GUI backend during tests.
     MPLBACKEND = agg
+passenv =
+    # Allow a workaround for "error initializing LibGit2 module":
+    # https://github.com/JuliaLang/julia/issues/18693
+    SSL_CERT_FILE
