--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,6 +34,7 @@ install:
 
 build_script:
   - julia -e "pkg = :DiffEqPy; Pkg.add(string(pkg))"
+  - julia -e "Pkg.checkout("PyCall")"
   - julia -e "using DiffEqPy"
 test_script:
   - tox -- --cov diffeqpy
