--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,6 +34,7 @@ install:
 
 build_script:
   # Empty so that it doesn't think it needs Visual Studio?
+  - echo 'test'
 
 test_script:
   - tox -- --cov diffeqpy
