Remove DiffEqPy.jl dependence entirely

--- a/tox.ini
+++ b/tox.ini
@@ -10,8 +10,7 @@ deps =
     # ^-- https://github.com/numba/numba/issues/2917
 commands =
     julia --color=yes -e 'Pkg.init()'
-    julia --startup-file=no --color=yes -e 'Pkg.add("DiffEqPy")'
-    julia --startup-file=no --color=yes -e 'using DiffEqPy'
+    julia --startup-file=no --color=yes {toxinidir}/diffeqpy/update.jl
     py.test \
         --pyargs diffeqpy \
         {posargs}
