--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,8 @@ deps =
     # ^-- https://github.com/numba/numba/issues/2917
 commands =
     julia --color=yes -e 'Pkg.init()'
-    julia --startup-file=no --color=yes {toxinidir}/diffeqpy/update.jl
+    python -c 'import diffeqpy; diffeqpy.install()'
+    julia --startup-file=no --color=yes -e 'Pkg.update()'
     py.test \
         --pyargs diffeqpy \
         {posargs}
