Remove version restriction for numba

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,8 @@ envlist = py27, py36
 deps =
     pytest
     pytest-cov
-    numba==0.37.0
-    llvmlite==0.22.0
-    # ^-- https://github.com/numba/numba/issues/2917
+    numba
+    llvmlite
 commands =
     julia --color=yes -e 'Pkg.init()'
     python -c 'import diffeqpy; diffeqpy.install()'
