--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,8 @@ passenv =
     # Allow a workaround for "error initializing LibGit2 module":
     # https://github.com/JuliaLang/julia/issues/18693
     SSL_CERT_FILE
+
+    # PyCall uses $PYTHON to configure Python executable.  It is
+    # useful to specify this in CI so that `diffeqpy.install()` can
+    # directly configure PyCall.
+    PYTHON
