--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,18 +7,16 @@ environment:
   matrix:
 
     # For Python versions available on Appveyor, see
-    # http://www.appveyor.com/docs/installed-software#python
-    # The list here is complete (excluding Python 2.6, which
-    # isn't covered by this document) at the time of writing.
+    # https://www.appveyor.com/docs/windows-images-software/#python
 
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHONDIR: "C:\\Python27-x64"
       JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.0/julia-1.0.1-win64.exe"
-    - PYTHON: "C:\\Python36-x64"
+    - PYTHONDIR: "C:\\Python36-x64"
       JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/1.0/julia-1.0.1-win64.exe"
 
 matrix:
   allow_failures:
-    - PYTHON: "C:\\Python27-x64"
+    - PYTHONDIR: "C:\\Python27-x64"
 
 notifications:
   - provider: Email
@@ -38,14 +36,15 @@ install:
   - set PATH=C:\projects\julia\bin;%PATH%
 
 # Install Python packages
-  - "%PYTHON%\\python.exe -m pip install --quiet tox"
+  - "%PYTHONDIR%\\python.exe -m pip install --quiet tox"
 
 build_script:
   # Empty so that it doesn't think it needs Visual Studio?
   - echo 'test'
 
 test_script:
-  - "%PYTHON%\\scripts\\tox -- --cov diffeqpy"
+  - "SET PYTHON=%PYTHONDIR%\\python.exe"
+  - "%PYTHONDIR%\\scripts\\tox -- --cov diffeqpy"
 
 artifacts:
   # bdist_wheel puts your built wheel in the dist directory
