Show build log in CI

--- a/tox.ini
+++ b/tox.ini
@@ -26,3 +26,6 @@ passenv =
     # useful to specify this in CI so that `diffeqpy.install()` can
     # directly configure PyCall.
     PYTHON
+
+    # diffeqpy/install.jl uses it
+    CI
