[DON'T MERGE] Use pre-release PyJulia on test.pypi.org

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,11 @@
 [tox]
 envlist = py2, py3
+indexserver =
+    DEV = https://test.pypi.org/simple/
 
 [testenv]
 deps =
+    :DEV:julia>=0.3dev
     pytest
     pytest-cov
     numba
@@ -26,3 +29,4 @@ passenv =
     # useful to specify this in CI so that `diffeqpy.install()` can
     # directly configure PyCall.
     PYTHON
+pip_pre = true
