--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   - export PYTHON="$(echo $PWD/.tox/py*/bin/python)"
   - echo "$PYTHON"
 
-  - tox -- --cov diffeqpy
+  - tox -- --cov diffeqpy -vs
 jobs:
   include:
     - env: TOXENV=py3-numba
