Enable julia.pytestplugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,6 @@
 [tool:pytest]
+addopts =
+    -p julia.pytestplugin
 norecursedirs = .* scripts build dist conda-recipe
 
 # https://github.com/pytest-dev/pytest/issues/1445
