--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = py2, py3
+envlist = py2, py3, py3-numba
 
 [testenv]
 deps =
     pytest
     pytest-cov
-    numba
 commands =
     python -c 'import diffeqpy; diffeqpy.install()'
     py.test \
@@ -25,3 +24,8 @@ passenv =
     # useful to specify this in CI so that `diffeqpy.install()` can
     # directly configure PyCall.
     PYTHON
+
+[testenv:py3-numba]
+deps =
+    {[testenv]deps}
+    numba
