--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
 language: python
 os:
   - linux
-python:
-    - "3.6"
-env:
-  global:
-    - TOXENV=py
 notifications:
   email: false
 before_install:
@@ -36,7 +31,9 @@ script:
   - tox -- --cov diffeqpy
 jobs:
   include:
+    - env: TOXENV=py3
+      python: "3.8"
     - env: TOXENV=py3-numba
-      python: "3.6"
+      python: "3.8"
   allow_failures:
     - env: TOXENV=py3-numba
