Use julia_project to manage Julia dependency pick dfc1426 Use julia_project to manage Julia dependency pick ae59cf3 Set env variables in tox.ini pick 52ec1cd Fix setting environment variables

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,7 @@
 include README.md
 include LICENSE.md
 include docs/*.txt
+include diffeqpy/sys_image/*.jl
+include diffeqpy/sys_image/Project.toml
+include diffeqpy/Project.toml
 include diffeqpy/*.jl
