--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -c 'import diffeqpy; diffeqpy.install()'
+    python -c 'import diffeqpy'
     py.test \
         --pyargs diffeqpy \
         {posargs}
