Set env variables in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,8 @@ whitelist_externals =
 setenv =
     # Do not use matplotlib GUI backend during tests.
     MPLBACKEND = agg
+    DIFFEQPY_COMPILE = n
+    DIFFEQ_DEPOT = y
 passenv =
     # Allow a workaround for "error initializing LibGit2 module":
     # https://github.com/JuliaLang/julia/issues/18693
