Fix setting environment variables

--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,9 @@ whitelist_externals =
 setenv =
     # Do not use matplotlib GUI backend during tests.
     MPLBACKEND = agg
-    DIFFEQPY_COMPILE = n
-    DIFFEQ_DEPOT = y
+    DIFFEQPY_INSTALL_JULIA = y
+    DIFFEQPY_COMPILE = y
+    DIFFEQPY_DEPOT = y
 passenv =
     # Allow a workaround for "error initializing LibGit2 module":
     # https://github.com/JuliaLang/julia/issues/18693
