--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,17 +19,22 @@ jobs:
           - windows-latest
         architecture: [x64]
         python-version: ['3.8']
+        julia-version: ['1']
       fail-fast: false
     name: Test ${{ matrix.os }} ${{ matrix.architecture }}
       Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v1
+      - name: Setup julia
+        uses: julia-actions/setup-julia@v1
+        with:
+          version: ${{ matrix.julia-version }}
+          arch: ${{ matrix.architecture }}
       - name: Setup python
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
           architecture: ${{ matrix.architecture }}
-      - run: python src/julia/find_libpython.py --list-all --verbose
       - name: Install tox
         run: |
           python -m pip install --upgrade pip
@@ -47,19 +52,3 @@ jobs:
         with:
           file: ./coverage.xml
           name: codecov-umbrella
-
-  check:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        toxenv: ['style', 'doc']
-      fail-fast: false
-    name: Check ${{ matrix.toxenv }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup python
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.8'
-      - run: python -m pip install --upgrade tox
-      - run: python -m tox -e ${{ matrix.toxenv }}
