--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,6 +22,7 @@ jobs:
         julia-version: ['1']
       fail-fast: false
     name: Test ${{ matrix.os }} ${{ matrix.architecture }}
+      Julia ${{ matrix.julia-version }}
       Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v1
