--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,11 +41,9 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install --upgrade tox
       - name: Run test
-        run: python -m tox -- --cov=julia
+        run: python -m tox -- --cov=diffeqpy
         env:
-          CI: 'true'  # run tests marked by @only_in_ci
           TOXENV: py
-          PYJULIA_TEST_REBUILD: 'yes'
       - run: cat .tox/py/log/pytest.log
         if: always()
       - name: Upload coverage to Codecov
