Force the use of LTS version in yml

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@ deps =
     pytest
     pytest-cov
 commands =
-    python -c 'import diffeqpy; diffeqpy.install(confirm=True)'
+    python -c 'import diffeqpy; diffeqpy.install()'
     py.test \
         --pyargs diffeqpy \
         {posargs}
