--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,6 +38,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade tox
+      - name: Install Julia using jill
+        run: |
+          python -m pip install --upgrade jill
+          python -c "from jill.install import install_julia; install_julia(confirm=True)"
       - name: Run test
         run: python -m tox -- --cov=diffeqpy -s
         env:
